# AutoTradingBot

./: .env.example  .gitignore  .vercelignore  AGENTS.md  README.md  TODO.md  pyproject.toml  setup.py
.claude/rules/: artifacts-to-disk.md  read-spec-before-coding.md  update-docs-after-changes.md
.claude/workflows/: daily-trading-cycle.md  implement-and-verify.md
config/: instruments.yaml  settings.yaml
docs/: architecture.md  core-beliefs.md  quality.md  user-guide-trading-decisions.md
scripts/: check_anthropic_connection.py  consolidate_duplicate_open_positions.py  repair_portfolio_cash.py  run_daily.sh  run_daily_launchd.sh
scripts/launchd/: com.autotradingbot.daily.plist
specs/: README.md  claude-brain.md  data-pipeline.md  portfolio-engine.md  risk-management.md  system.md  testing-strategy.md  web-dashboard.md
src/: __init__.py  main.py
src/brain/: __init__.py  claude_client.py  claude_tools.py  prompt_builder.py  response_parser.py
src/data/: __init__.py  data_cache.py  economic_data.py  market_data.py  news_sentiment.py
src/execution/: __init__.py  order.py  simulator.py
src/journal/: __init__.py  performance.py  trade_journal.py
src/portfolio/: __init__.py  hold_rules.py  instrument_registry.py  margin.py  (+3 more)
tests/: __init__.py  test_claude_tools.py  test_data_cache.py  test_economic_data.py  test_hold_rules.py  test_market_data.py  test_news_sentiment.py  test_performance.py  test_portfolio.py  test_response_parser.py  test_response_parser_learnings.py  test_trading_flags.py
web/: package-lock.json  package.json  tailwind.config.ts
(+29 files in other folders)
